--- a/action.yml
+++ b/action.yml
@@ -9,12 +9,12 @@ inputs:
   rclone_conf:
     description: 'RClone configuration content'
     required: false
-  args:
-    description: 'Arguments to pass to the RClone command'
+  command:
+    description: 'Command to pass to rclone'
     required: true
 
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.args }}
+    - ${{ inputs.command }}
