--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ branding:
 inputs:
   rclone_conf:
     description: 'RClone configuration content'
-    required: false
+    required: true
   command:
     description: 'Command to pass to rclone'
     required: true
