--- a/action.yml
+++ b/action.yml
@@ -16,5 +16,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
+    env:
+      RCLONE_CONF: ${{ inputs.rclone_conf }}
   args:
     - ${{ inputs.args }}
