--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  env:
+  envs:
     RCLONE_CONF: ${{ inputs.rclone_conf }}
   args:
     - ${{ inputs.args }}
